@@ -42,6 +42,10 @@
    */
 
 EXTERN_TREE\
+(char*) tree_quote_property
+(const char *property_value);
+
+EXTERN_TREE\
 (device *) tree_parse
 (device *root,
  const char *fmt,
